# OCC-Ex1

./: .gitignore  CMakeLists.txt  ex1.cpp
OCC-cmake/: OCE-libraries-debug.cmake  OCE-libraries-release.cmake  OCE-libraries.cmake  OCEConfig.cmake  OCEConfigVersion.cmake  OpenCASCADECompileDefinitionsAndFlags-release.cmake  OpenCASCADEConfig.cmake  OpenCASCADEConfigVersion.cmake  OpenCASCADEDataExchangeTargets-release.cmake  OpenCASCADEDataExchangeTargets.cmake  OpenCASCADEDrawTargets.cmake  OpenCASCADEFoundationClassesTargets.cmake  OpenCASCADEModelingAlgorithmsTargets.cmake  OpenCASCADEModelingDataTargets.cmake  OpenCASCADEVisualizationTargets.cmake
